add swagger + fix handler
