# backend_repo/models/subscription.go
@@ -1,10 +1,8 @@
 package models
 
-import "time"
-
 type Subscription struct {
-	ID       string        `json:"id" bson:"_id"`
-	Type     string        `json:"type" bson:"type"`
-	Price    float64       `json:"price" bson:"price"`
-	Duration time.Duration `json:"duration" bson:"duration"`
+	ID       string  `json:"id" bson:"_id"`
+	Type     string  `json:"type" bson:"type"`
+	Price    float64 `json:"price" bson:"price"`
+	Duration float64 `json:"duration" bson:"duration"`
 }
