# backend_repo/routes/handlers/trainer_handlers/trainer_update.go
@@ -21,7 +21,7 @@ type trainerUpdateReq struct {
 // @Success 200 {string} string "Обновление выполнено успешно"
 // @Failure 400 {string} string "Неверный ввод"
 // @Failure 500 {string} string "Ошибка сервера при обновлении"
-// @Router /api/trainers [put]
+// @Router /api/trainer [put]
 func (bc *TrainerController) TrainerUpdate(w http.ResponseWriter, r *http.Request) {
 	var req trainerUpdateReq
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
