# backend_repo/routes/handlers/user_handler/user_list.go
@@ -2,8 +2,11 @@ package user_handler
 
 import (
 	"net/http"
+	"profit/models"
 	"profit/routes/handlers/backendController"
 )
+
+type usersAliaceType = *models.User
 
 // UserList обрабатывает GET-запрос для получения списка пользователей
 // @Summary Возвращает список пользователей
@@ -11,16 +14,21 @@ import (
 // @Tags Users
 // @Accept json
 // @Produce json
-// @Success 200 {array} User "Список пользователей"
+// @Success 200 {array} usersAliaceType "Список пользователей"
 // @Failure 400 {string} string "Неверный ввод"
 // @Failure 500 {string} string "Ошибка при получении списка пользователей"
 // @Router /api/users [get]
 func (uc *UserController) UserList(w http.ResponseWriter, r *http.Request) {
-	userList, err := uc.userRepo.UsersList(r.Context())
+	var (
+		users []usersAliaceType
+		err   error
+	)
+
+	users, err = uc.userRepo.UsersList(r.Context())
 	if err != nil {
 		backendController.WriteJSONResponse(w, http.StatusBadRequest, err.Error())
 		return
 	}
 
-	backendController.WriteJSONResponse(w, http.StatusOK, userList)
+	backendController.WriteJSONResponse(w, http.StatusOK, users)
 }
