# backend_repo/routes/routes.go
@@ -41,12 +41,12 @@ func InitRoutes(database *mongo.Database, ctx context.Context) *chi.Mux {
 	r.Group(func(protected chi.Router) {
 		protected.Use(protection.RoleMiddleware("admin"))
 
-		protected.Get("/api/trainer", trainerController.TrainerList)
+		protected.Get("/api/trainers", trainerController.TrainerList)
 		protected.Put("/api/trainer", trainerController.TrainerUpdate)
-		protected.Delete("api/trainer", trainerController.TrainerDelete)
+		protected.Delete("/api/trainer", trainerController.TrainerDelete)
 		protected.Post("api/trainer", trainerController.AddTrainer)
 
-		protected.Get("/api/user", userController.UserList)
+		protected.Get("/api/users", userController.UserList)
 		protected.Put("/api/user", userController.UserUpdate)
 		protected.Delete("/api/user", userController.UserDelete)
 		protected.Post("/api/trainer", userController.AddUser)
